--- a/res/layout/fragment_doctor.xml
+++ b/res/layout/fragment_doctor.xml
@@ -28,19 +28,20 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_daftar_dokter"
             android:layout_marginTop="@dimen/dp_16px"
-            android:paddingHorizontal="@dimen/dp_16px"
-            />
+            android:paddingHorizontal="@dimen/dp_16px" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_add_appointment"
+            android:id="@+id/btn_add_doctor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/button_margin"
+            android:layout_marginStart="@dimen/button_margin"
+            android:layout_marginTop="@dimen/button_margin"
+            android:layout_marginEnd="@dimen/button_margin"
+            android:layout_marginBottom="@dimen/button_margin"
             android:backgroundTint="@color/primaryColor"
-            android:src="@drawable/ic_baseline_add_24_1"
-            />
+            android:src="@drawable/ic_baseline_add_24_1" />
 
     </RelativeLayout>
 
