--- a/res/layout/fragment_doctor_add.xml
+++ b/res/layout/fragment_doctor_add.xml
@@ -79,6 +79,7 @@
             android:hint="@string/contact">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_doctor_add_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_baseline_contacts_24"
