--- a/res/layout/fragment_doctor_picker.xml
+++ b/res/layout/fragment_doctor_picker.xml
@@ -7,24 +7,34 @@
     android:paddingTop="@dimen/dp_16px"
     >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:text="Pilih dokter"
-        android:textSize="@dimen/h6"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        />
-
-    <ListView
-        android:id="@+id/lst_picker_doctor"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dp_16px"
-        android:paddingHorizontal="@dimen/dp_16px"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="@dimen/dp_8px"
-        />
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="Pilih dokter"
+            android:textSize="@dimen/h6"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
+
+        <SearchView
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search Doctor" />
+
+        <ListView
+            android:id="@+id/lst_picker_doctor"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dp_16px"
+            android:paddingHorizontal="@dimen/dp_16px" />
+
+    </LinearLayout>
 
 </FrameLayout>
