--- a/res/layout/fragment_doctor_picker.xml
+++ b/res/layout/fragment_doctor_picker.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:text="Pilih dokter"
+            android:text="@string/choose_a_doctor"
             android:textSize="@dimen/h6"
             android:textAlignment="center"
             android:textColor="@color/black" />
@@ -28,12 +28,19 @@
             android:iconifiedByDefault="false"
             android:queryHint="Search Doctor" />
 
-        <ListView
-            android:id="@+id/lst_picker_doctor"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/dp_16px"
-            android:paddingHorizontal="@dimen/dp_16px" />
+            android:layout_height="400dp">
+            <ListView
+                android:id="@+id/lst_picker_doctor"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/dp_16px"
+                android:paddingHorizontal="@dimen/dp_16px"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="@dimen/dp_8px"
+                />
+        </LinearLayout>
 
     </LinearLayout>
 
